# project-ledger

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  DEVLOG.md  PROJECT_STATE.md  README.md
game-design-doc-governance/: CHANGELOG.md  MANIFEST.md  README.md  SKILL.md  pyproject.toml  requirements.txt
game-design-doc-governance/doc_modules/: Character_Sheets.md.tmpl  Collectibles_Design.md.tmpl  Encounter_Design.md.tmpl  Gameplay_Systems.md.tmpl  Level_Design.md.tmpl  LiveOps_Design.md.tmpl  Mission_Design.md.tmpl  Multiplayer_Design.md.tmpl  Narrative_Bible.md.tmpl  Narrative_Pipeline.md.tmpl  Narrative_Script.md.tmpl  Progression_Design.md.tmpl  Resource_And_Economy.md.tmpl  Technical_Design.md.tmpl  UI_UX_Design.md.tmpl  World_Design.md.tmpl
game-design-doc-governance/docs/: audit_reference.md  installation.md  issue_state.md  migration_guide.md  new_project_setup.md  profile_schema.md  quickstart.md  release_process.md  style_guide_markers.md  troubleshooting.md
game-design-doc-governance/modules/: 01_document_architecture.md  02_project_profile.md  03_genre_profiles.md  04_authority_boundaries.md  05_anchor_and_change_safety.md  06_audit_workflow.md  07_export_and_snapshot.md  08_migration_workflow.md  09_ai_collaboration_rules.md
game-design-doc-governance/profiles/: horror_narrative.yaml  linear_action_adventure.yaml  liveops_mobile.yaml  multiplayer_shooter.yaml  open_world_narrative_tactical_shooter.yaml  open_world_rpg.yaml  puzzle_adventure.yaml  roguelite.yaml  strategy_simulation.yaml  survival_crafting.yaml
project-docs/: README.md  (+3 more)
(+177 files in other folders)
